--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 
 :root{
- --text-color: white;
+ --text-color: black;
  --bg-url: url(Assets/Oppe\ Light.jpg);
  --stroke-color: rgba(255, 255, 255, 0.5);
  --surface-color: rgba(255, 255, 255, 0.05);
  --surface--color--hover: rgba(0, 0, 0, 0.02);
- --highlight-color: rgba(255, 255, 255, 0.2);
- --switch-color-url: url(./Assets/moon-stars.svg)
+ --highlight-color: rgba(0, 0, 0, 0.2);
+ --switch-color-url: url(./Assets/moon-stars.svg);
 }
 .light{
   --text-color: black;
@@ -20,11 +20,12 @@
  --surface-color: rgba(0, 0, 0, 0.05);
  --surface-color-hover: rgba(255, 255, 255, 0.02);
  --highlight-color: rgba(0, 0, 0, 0.2);
- --switch-color-url: url(./Assets/sun.svg)
+ --switch-color-url: url(./Assets/sun.svg);
 }
 
 body {
  background: var(--bg-url) no-repeat top center/cover;
+ height: 100vh;
 }
 body * {
   font-family: 'Inter', sans-serif;
@@ -35,7 +36,8 @@ body * {
 
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px ;
   
   border: 1px solid black;
   margin: 56px auto 0px;
@@ -72,11 +74,16 @@ top: 50%;
 left: 0;
 z-index: 1;
 transform: translateY(-50%);
+animation: slide-out 0.3s forwards;
 }
 
+
 .light #switch button{
- right: 0;
- left: initial;
+animation: slide-in 0.3s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color)
 }
 
 #switch span{
@@ -148,3 +155,21 @@ footer{
   padding: 24px 0;
   text-align: center;
 }
+
+
+@keyframes slide-in {
+  from{
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }}
